--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "@types/googlemaps": "^3.43.3",
     "axios": "^0.24.0",
     "close.io": "^1.3.0",
+    "core-js": "^3.22.7",
     "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "file-base64": "^1.0.0",
     "google-map-react": "^2.1.10",
     "history": "^5.1.0",
-    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "lodash.throttle": "^4.1.1",
-    "material-ui-chip-input": "^2.0.0-beta.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "prop-types": "^15.8.1",
@@ -52,7 +51,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-promise": "^3.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.6.0",
     "react-typewriter-effect": "^1.1.0",
